--- a/contact.html
+++ b/contact.html
@@ -5,22 +5,10 @@
 	<title>Andy Ma, Developer</title>
 	<link rel="stylesheet" type="text/css" href="css/prime.css"/>
 	<link rel="icon" href="favicon.ico"/>
-	<script type="text/javascript" src="js/typed.js"/>
-	<link href="http://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet" type="text/css" />
 </head>
 
-
-<script src="typed.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function(){
-      Typed.new('.element', {
-        strings: ["Hey There! I'm Andy Ma."],
-        typeSpeed: 40
-      });
-  });
-</script>
-
 <body>
+
 
 <svg display="none" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
    <defs>
@@ -66,46 +54,28 @@
    </defs>
 </svg>
 
-<div class="container">
-	<h1 class="element">Andy Ma, Developer</h1>
-	<hr class="solid-line"></hr>
-	
-	<div id="expertise">
-		<section>
-		
-			<a href=""><img class="img-circle" src="bib.jpg"></img></a>
-			<div id="bibliography">
-			<ul class = "navbar">
-			<li><svg class="icon pos"><use xlink:href="#icon-mail4"></use></svg><a class="link-1" href="resume.html" style="text-decoration:none">Resume</a></li>
-			<li><svg class="icon pos"><use xlink:href="#icon-git"></use></svg><a class="link-1" href="portfolio.html" style="text-decoration:none">Portfolio</a></li>
-			<li><svg class="icon pos"><use xlink:href="#icon-old-phone"></use></svg><a class="link-1" href="contact.html" style="text-decoration:none">Contact</a></li>
-			</ul>
-			</div>
-			<br></br>
-			<h2 class="subhead">
-				<svg class="icon pos"><use xlink:href="#icon-keyboard"></use></svg>
-				Experienced in Application and Website Development
-			</h2>
-			<p>
-			I am much more experienced in application development (on multiple platforms and multiple frameworks) with Java and C++. 
-			I can also write C#, C and Python. My Web development skills include HTML, CSS, JavaScript and some knowledge of PHP.
-			Some Application frameworks I am famaliar with include <a target="_blank" style="text-decoration:none;" href="https://www.opengl.org/">OpenGL</a>, <a target="_blank" style="text-decoration:none;" href="https://libgdx.badlogicgames.com/">libGDX</a>, and <a target="_blank" style="text-decoration:none;" href="https://www.sfml-dev.org/">SFML</a>.
-			</p>
-		</section>
-		
-		<section>
-			<h2 class="subhead">
-				<svg class="icon pos"><use xlink:href="#icon-earth"></use></svg>
-				Familiar with Multiple Frameworks
-			</h2>
-			<p>
-			I am familiar with multiple application development frameworks, and have a broad knowledge of different game APIs.
-			I am connected to the modding community in the games I play, whether I am creating or if I am just interested in the various APIs I come across.
-			</p>
-		</section>
-	</div>
+<a href="resume.html" style="color:black;text-decoration:none;"><h1 class="title">Contact</h1></a>
+<hr class="solid-line"></hr> 	
+
+<div id="expertise">
+<div id="bibliography-center">
+	<ul class = "navbar-center">
+		<li><svg class="icon pos"><use xlink:href="#icon-info"></use></svg><a class="link-1" href="index.html" style="text-decoration:none">Home</a></li>
+		<li><svg class="icon pos"><use xlink:href="#icon-mail4"></use></svg><a class="link-1" href="resume.html" style="text-decoration:none">Resume</a></li>
+		<li><svg class="icon pos"><use xlink:href="#icon-git"></use></svg><a class="link-1" href="portfolio.html" style="text-decoration:none">Portfolio</a></li>
+	</ul>
+</div>
+<br></br>
+<div style="text-align:center">
+<h1><svg class="icon pos"><use xlink:href="#icon-smile"></use></svg>Email me here:</h1>
+<a href="">solarcactus@live.com</a>
+<br></br>
+<h1><svg class="icon pos"><use xlink:href="#icon-old-phone"></use></svg>Call or Text me here.</h1>
+<a href="">604-725-2988</a>
+
+
+<h1><svg class="icon pos"><use xlink:href="#icon-info"></use></svg>Get Linked In.</h1>
+<a href="https://www.linkedin.com/in/andy-ma-4a1186151/">Linkedin Account</a>
 </div>
 </body>
-
-
 </html>
