--- a/resume.html
+++ b/resume.html
@@ -1,26 +1,14 @@
 <!DOCTYPE html>
 
-<html>
+<html style="overflow: scroll;">
 <head>
 	<title>Andy Ma, Developer</title>
 	<link rel="stylesheet" type="text/css" href="css/prime.css"/>
 	<link rel="icon" href="favicon.ico"/>
-	<script type="text/javascript" src="js/typed.js"/>
-	<link href="http://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet" type="text/css" />
 </head>
 
-
-<script src="typed.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function(){
-      Typed.new('.element', {
-        strings: ["Hey There! I'm Andy Ma."],
-        typeSpeed: 40
-      });
-  });
-</script>
-
 <body>
+
 
 <svg display="none" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
    <defs>
@@ -65,47 +53,49 @@
       </symbol>
    </defs>
 </svg>
+<a href="resume.html" style="color:black;text-decoration:none;"><h1 class="title">Resume</h1></a>
+<hr class="solid-line"></hr>
 
-<div class="container">
-	<h1 class="element">Andy Ma, Developer</h1>
-	<hr class="solid-line"></hr>
-	
-	<div id="expertise">
-		<section>
-		
-			<a href=""><img class="img-circle" src="bib.jpg"></img></a>
-			<div id="bibliography">
-			<ul class = "navbar">
-			<li><svg class="icon pos"><use xlink:href="#icon-mail4"></use></svg><a class="link-1" href="resume.html" style="text-decoration:none">Resume</a></li>
-			<li><svg class="icon pos"><use xlink:href="#icon-git"></use></svg><a class="link-1" href="portfolio.html" style="text-decoration:none">Portfolio</a></li>
-			<li><svg class="icon pos"><use xlink:href="#icon-old-phone"></use></svg><a class="link-1" href="contact.html" style="text-decoration:none">Contact</a></li>
-			</ul>
-			</div>
-			<br></br>
-			<h2 class="subhead">
-				<svg class="icon pos"><use xlink:href="#icon-keyboard"></use></svg>
-				Experienced in Application and Website Development
-			</h2>
-			<p>
-			I am much more experienced in application development (on multiple platforms and multiple frameworks) with Java and C++. 
-			I can also write C#, C and Python. My Web development skills include HTML, CSS, JavaScript and some knowledge of PHP.
-			Some Application frameworks I am famaliar with include <a target="_blank" style="text-decoration:none;" href="https://www.opengl.org/">OpenGL</a>, <a target="_blank" style="text-decoration:none;" href="https://libgdx.badlogicgames.com/">libGDX</a>, and <a target="_blank" style="text-decoration:none;" href="https://www.sfml-dev.org/">SFML</a>.
-			</p>
-		</section>
-		
-		<section>
-			<h2 class="subhead">
-				<svg class="icon pos"><use xlink:href="#icon-earth"></use></svg>
-				Familiar with Multiple Frameworks
-			</h2>
-			<p>
-			I am familiar with multiple application development frameworks, and have a broad knowledge of different game APIs.
-			I am connected to the modding community in the games I play, whether I am creating or if I am just interested in the various APIs I come across.
-			</p>
-		</section>
-	</div>
+<div id="expertise">
+<div id="bibliography-center">
+	<ul class = "navbar-center">
+		<li><svg class="icon pos"><use xlink:href="#icon-info"></use></svg><a class="link-1" href="index.html" style="text-decoration:none">Home</a></li>
+		<li><svg class="icon pos"><use xlink:href="#icon-git"></use></svg><a class="link-1" href="portfolio.html" style="text-decoration:none">Portfolio</a></li>
+		<li><svg class="icon pos"><use xlink:href="#icon-old-phone"></use></svg><a class="link-1" href="contact.html" style="text-decoration:none">Contact</a></li>
+	</ul>
+</div>
+<h2 class="subtitle">Experience</h2>
+<p>
+<b>2016-(present)</b>: <b>Richmond High School Robotics Club</b> 
+- Teaching Python, C++ and Java for grades 8 to 12.
+</p>
+<br></br>
+<p>	
+<b>2014-(present)</b>: <b>Developer on the ARKCraft project</b>
+- Working with a Java and GSON API to add multiple things to a base game.
+</p>
+
+
+<a href=""><img class="img-circle" style="float:left; padding-left:30px; padding-right:30px; padding-top:20px;" src="css/kumon.PNG"></img></a>
+<br/>
+<div>
+<b>2015-(present)</b>: <b>Marker at Kumon Learning Center</b>
+- Working with multiple markers in order to mark student homework and help studednts out with problems in Reading and Math.
+- Worked for about 7 hours every week, in total 300+ hours.
+- At the Kumon Richmond Branch on Westminster Hwy. 
+</div>
+
+<h2 class="subtitle">Skills</h2>
+<p>
+<svg class="icon pos"><use xlink:href="#icon-keyboard"></use></svg>Fluent Java and C++ application development skills. Good knowledge of application frameworks, such as OpenGL or libGDX.
+<br></br>
+<svg class="icon pos"><use xlink:href="#icon-earth"></use></svg>Skills in Web development with HTML, CSS and JavaScript, some knowledge of database usage such as mySQL and programming with PHP.
+</p>
+
+<p style="margin-top: 50px; text-align:center;">
+<a style="text-decoration:none;" href="https://drive.google.com/file/d/1kOEbsjMgGxK3KRciSHQqb2zzx8_3WO13/view?usp=sharing">Click Here for PDF Resume</a>
+</p>
 </div>
 </body>
-
 
 </html>
