--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 				<a href="https://github.com/Archiving" class="btn btn-social-icon btn-github">
 					<span class="fa fa-github"></span>
 				</a>
-				<a class="btn btn-social-icon btn-linkedin">
+				<a href="https://www.linkedin.com/in/salarc/" class="btn btn-social-icon btn-linkedin">
 					<span class="fa fa-linkedin"></span>
 				</a>
-				<a class="btn btn-social-icon btn-instagram">
+				<a href="https://www.instagram.com/_andy_ma/" class="btn btn-social-icon btn-instagram">
 					<span class="fa fa-instagram"></span>
 				</a>
 			</div>
