--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <div class="container">
-	<h1 class="element">Andy Ma (solarcactus)</h1>
+	<h1 class="element">Andy Ma</h1>
 	<hr class="solid-line"></hr>
 	
 	<div id="expertise">
