changed info, added image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 	<div id="expertise">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
-		<a href=""><img class="img-circle" src="bib.jpg"></img></a>
+		<a href=""><img class="img-circle" src="bib.png"></img></a>
 		
 			<div class="buttons">
 				<a href="https://github.com/Archiving" class="btn btn-social-icon btn-github">
@@ -35,20 +35,24 @@
 			
 		<section>
 			<h3 class="subheader">
-				Full Stack Development
+				About Me
 			</h3>
 			<p>
-			Being proficient in both front and back end development, I have the most experience in C++ and Java development. Specifically, my front-end development in Java consists of designing UI through JavaFX as well as Android App development through libGDX, a java library which includes utilities for game development. My C++ experience consists of work with libraries like OpenGL and SFML, both graphics/game development libraries, but also I have experience with machine learning, specifically using OpenCV, a computer vision library.
+			I first started programming while in high school, being inspired to start through the development of modifications to games, mostly in Java, adding new content in order to make the games more fun for me and friends. 
+			From this, I moved on to persuing more serious programming projects, including both software and game development with Java/C++. I now have experience in multiple game development/graphics libraries, most well known being
+			experience with the Unity3D engine, OpenGL 3D game development, and experience in LWJGL (Lightweight Java Game Library) for 2D and 3D game development. You can check out my personal projects on my Github, or contact me through the information on my LinkedIn.
+			As for education, I'm currently persuing a degree in computer science at the University of British Columbia, in the faculty of Science.
 			</p>
 		</section>
 		
 		<section>
 			<h3 class="subheader">
-				About Me
+				Projects
 			</h3>
 			<p>
-			I am familiar with multiple application development frameworks, and have a broad knowledge of different game APIs.
-			I am connected to the modding community in the games I play, whether I am creating or if I am just interested in the various APIs I come across.
+			I do fullstack development - most of my frontend experience involves HTML/CSS and JavaScript with React, but I also have experience with JavaFX and Swing. I like to do backend in C++ or Java, and have PHP experience for development related to servers, and experience with MySQL databases.
+			I've explored the machine learning space through computer vision, involving letter/number recognition, and created a pathfinding application for use in conjunction with a program I built in order to enable VEX robots to move autonomously through
+			the A* pathfinding algorithm. I have an ongoing project, farm.io, a 2D farming game where you progress through technology and manage the economy of farming throughout campaigns in multiple locations around the world.
 			</p>
 		</section>
 	</div>
