--- a/index.html
+++ b/index.html
@@ -40,19 +40,7 @@
 			<p>
 			I first started programming while in high school, being inspired to start through the development of modifications to games, mostly in Java, adding new content in order to make the games more fun for me and friends. 
 			From this, I moved on to persuing more serious programming projects, including both software and game development with Java/C++. I now have experience in multiple game development/graphics libraries, most well known being
-			experience with the Unity3D engine, OpenGL 3D game development, and experience in LWJGL (Lightweight Java Game Library) for 2D and 3D game development. You can check out my personal projects on my Github, or contact me through the information on my LinkedIn.
-			As for education, I'm currently persuing a degree in computer science at the University of British Columbia, in the faculty of Science.
-			</p>
-		</section>
-		
-		<section>
-			<h3 class="subheader">
-				Projects
-			</h3>
-			<p>
-			I do fullstack development - most of my frontend experience involves HTML/CSS and JavaScript with React, but I also have experience with JavaFX and Swing. I like to do backend in C++ or Java, and have PHP experience for development related to servers, and experience with MySQL databases.
-			I've explored the machine learning space through computer vision, involving letter/number recognition, and created a pathfinding application for use in conjunction with a program I built in order to enable VEX robots to move autonomously through
-			the A* pathfinding algorithm. I have an ongoing project, farm.io, a 2D farming game where you progress through technology and manage the economy of farming throughout campaigns in multiple locations around the world.
+			experience with the Unity3D engine, OpenGL 3D game development, and experience in LWJGL (Lightweight Java Game Library) for 2D and 3D game development. Check out my projects at my Github, or check out my LinkedIn for my experience in the workplace!
 			</p>
 		</section>
 	</div>
