New changes added projects, changed description, etc..

--- a/index.html
+++ b/index.html
@@ -38,14 +38,40 @@
 				About Me
 			</h3>
 			<p>
-			I first started programming while in high school, being inspired to start through the development of modifications to games, mostly in Java, adding new content in order to make the games more fun for me and friends. 
-			From this, I moved on to persuing more serious programming projects, including both software and game development with Java/C++. I now have experience in multiple game development/graphics libraries, most well known being
-			experience with the Unity3D engine, OpenGL 3D game development, and experience in LWJGL (Lightweight Java Game Library) for 2D and 3D game development. Check out my projects at my Github, or check out my LinkedIn for my experience in the workplace!
+			<strong>I like making games.</strong>
+			My passion for developing games started at an early age, starting through making mods for the game <i>Minecraft</i>.
+			Thousands of lines of code and 6 years of programming later, my passion for game development has remained.
+			Currently, I study at UBC Vancouver, working through a computer science degree while working on fun projects with alot of awesome people!
+			Grand strategy games are what i'm currently really into, but I love all sorts of genres. Backend development with C++ or Java is what i'm most used to,
+			however I love exploring new technology, and learn quickly. Below, you can find a preview of the projects i've worked on, but I strongly encourage 
+			looking at my Github for more projects and more information, or check out my Linkedin for current work experience.
+			<div style="text-align:center;">
+				<h1>Estate</h1>
+				<h6><i>Top-down 2D Medival RTS done in C++ with Allegro5</i></h6>
+				<video width = "460" height = "260" autoplay loop muted playsinline>
+					<source src="estate.webm" type="video/webm">
+					<source src="estate.mp4" type="video/mp4">
+				</video>
+			</div>
+			
+			<div style="text-align:center;">
+				<h1>farm.io</h1>
+				<h6><i>Top-down 2D farming adventure done in Java with libGDX</i></h6>
+				<video width = "460" height = "260" autoplay loop muted playsinline>
+					<source src="farmio.webm" type="video/webm">
+					<source src="farmio.mp4" type="video/mp4">
+				</video>
+			</div>	
+			
 			</p>
 		</section>
 	</div>
+
 </div>
+
+<div class="footer">
+  <p>Image used in background: <a href="https://www.reddit.com/r/EarthPorn/comments/71r8zy/howe_sound_crest_trail_in_vancouver_bc_canada_oc/?utm_source=ifttt" class="source">Howe Sound Crest Trail</a></p>
+</div>
+
 </body>
-
-
 </html>
