--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-
 <div class="container">
+
 	<h1 class="element">Andy Ma</h1>
 	<hr class="solid-line"></hr>
 	
@@ -66,12 +66,12 @@
 			</p>
 		</section>
 	</div>
-
 </div>
 
 <div class="footer">
   <p>Image used in background: <a href="https://www.reddit.com/r/EarthPorn/comments/71r8zy/howe_sound_crest_trail_in_vancouver_bc_canada_oc/?utm_source=ifttt" class="source">Howe Sound Crest Trail</a></p>
 </div>
 
+<div class="bg"></div>
 </body>
 </html>
