--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 	<div id="expertise">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
-		<a href=""><img class="img-circle" src="bib.png"></img></a>
+		<a href=""><img class="img-circle" src="bib.jpg"></img></a>
 		
 			<div class="buttons">
 				<a href="https://github.com/Archiving" class="btn btn-social-icon btn-github">
@@ -45,6 +45,7 @@
 			Grand strategy games are what i'm currently really into, but I love all sorts of genres. Backend development with C++ or Java is what i'm most used to,
 			however I love exploring new technology, and learn quickly. Below, you can find a preview of the projects i've worked on, but I strongly encourage 
 			looking at my Github for more projects and more information, or check out my Linkedin for current work experience.
+			<div style="display:flex; flex-direction:row; justify-content: center;">
 			<div style="text-align:center;">
 				<h1>Estate</h1>
 				<h6><i>Top-down 2D Medival RTS done in C++ with Allegro5</i></h6>
@@ -62,6 +63,7 @@
 					<source src="farmio.mp4" type="video/mp4">
 				</video>
 			</div>	
+			</div>
 			
 			</p>
 		</section>
