--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
 				<a href="https://github.com/Archiving" class="btn btn-social-icon btn-github">
 					<span class="fa fa-github"></span>
 				</a>
-				<a href="https://www.linkedin.com/in/salarc/" class="btn btn-social-icon btn-linkedin">
+				<a href="https://www.linkedin.com/in/solarc/" class="btn btn-social-icon btn-linkedin">
 					<span class="fa fa-linkedin"></span>
-				</a>
-				<a href="https://www.instagram.com/_andy_ma/" class="btn btn-social-icon btn-instagram">
-					<span class="fa fa-instagram"></span>
 				</a>
 			</div>
 			
@@ -71,7 +68,7 @@
 </div>
 
 <div class="footer">
-  <p>Image used in background: <a href="https://www.reddit.com/r/EarthPorn/comments/71r8zy/howe_sound_crest_trail_in_vancouver_bc_canada_oc/?utm_source=ifttt" class="source">Howe Sound Crest Trail</a></p>
+  <p>Image used in background: My own! From Wedgemount Lake</p>
 </div>
 
 <div class="bg"></div>
