--- a/index.html
+++ b/index.html
@@ -31,44 +31,36 @@
 			</div>
 			
 		<section>
-			<h3 class="subheader">
-				About Me
-			</h3>
+			<h2 class="subheader">
+				About Me:
+			</h2>
 			<p>
-			<strong>I like making games.</strong>
-			My passion for developing games started at an early age, starting through making mods for the game <i>Minecraft</i>.
-			Thousands of lines of code and 6 years of programming later, my passion for game development has remained.
-			Currently, I study at UBC Vancouver, working through a computer science degree while working on fun projects with alot of awesome people!
-			Grand strategy games are what i'm currently really into, but I love all sorts of genres. Backend development with C++ or Java is what i'm most used to,
-			however I love exploring new technology, and learn quickly. Below, you can find a preview of the projects i've worked on, but I strongly encourage 
-			looking at my Github for more projects and more information, or check out my Linkedin for current work experience.
-			<div style="display:flex; flex-direction:row; justify-content: center;">
+			<h4>I LOVE making games.</h4><br/>
+			My passion for game development started, suprisingly, through making modifications for the game <i><strong>Minecraft</strong></i> in Java! Thousands of lines of code later, my love for game development has remained.<br/><br/>
+			I've had the amazing opportunity to work at some great companies, mainly focusing on <strong>mobile game development</strong>, with strong <strong>Unity</strong>, <strong>Java</strong> and <strong>C++</strong> skills working with both front and back-end systems, helping to develop and maintain <strong>5M+</strong> player games like <a href="https://www.ea.com/en-au/games/fifa/fifa-mobile">FIFA Mobile</a>, and <a href="https://play.google.com/store/apps/details?id=com.eastsidegames.trailerparkboys&hl=en_CA&gl=US">Trailer Park Boys: Greasy Money</a> alongside large teams of talented people!<br/><br/>
+			In my spare time, I love developing personal projects for fun, to learn new skills and to develop games that I enjoy! Below are open-source games that I have made over the years. Check out my <a href="https://github.com/Archiving">Github</a> for a deeper-dive, or my <a href="https://www.linkedin.com/in/solarc/">LinkedIn</a> for more info on my job experince!
+			<hr/>
 			<div style="text-align:center;">
-				<h1>Estate</h1>
+				<h1><a href="https://github.com/perpendicular-studios/estate">Estate</a></h1>
 				<h6><i>Top-down 2D Medival RTS done in C++ with Allegro5</i></h6>
-				<video width = "460" height = "260" autoplay loop muted playsinline>
+				<video width = "460" height = "260" autoplay loop muted playsinline>	
 					<source src="estate.webm" type="video/webm">
 					<source src="estate.mp4" type="video/mp4">
 				</video>
 			</div>
-			
+			<hr/>
 			<div style="text-align:center;">
-				<h1>farm.io</h1>
+				<h1><a href="https://github.com/Archiving/farm.io">farm.io</a></h1>
 				<h6><i>Top-down 2D farming adventure done in Java with libGDX</i></h6>
 				<video width = "460" height = "260" autoplay loop muted playsinline>
 					<source src="farmio.webm" type="video/webm">
 					<source src="farmio.mp4" type="video/mp4">
 				</video>
 			</div>	
-			</div>
 			
 			</p>
 		</section>
 	</div>
-</div>
-
-<div class="footer">
-  <p>Image used in background: My own! From Wedgemount Lake</p>
 </div>
 
 <div class="bg"></div>
