--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<a href=""><img class="img-circle" src="bib.jpg"></img></a>
 		
 			<div class="buttons">
-				<a href="https://github.com/Archiving" class="btn btn-social-icon btn-github">
+				<a href="https://github.com/ziqianma" class="btn btn-social-icon btn-github">
 					<span class="fa fa-github"></span>
 				</a>
 				<a href="https://www.linkedin.com/in/solarc/" class="btn btn-social-icon btn-linkedin">
@@ -37,8 +37,24 @@
 			<p>
 			<h4>I LOVE making games.</h4><br/>
 			My passion for game development started, suprisingly, through making modifications for the game <i><strong>Minecraft</strong></i> in Java! Thousands of lines of code later, my love for game development has remained.<br/><br/>
+			Currently, I have a strong interest for the C++ language, computer graphics, multithreaded architectures and memory/performance optimization. Working on a C++/OpenGL rendering engine on the side! <br/><br/>
 			I've had the amazing opportunity to work at some great companies, mainly focusing on <strong>mobile game development</strong>, with strong <strong>Unity</strong>, <strong>Java</strong> and <strong>C++</strong> skills working with both front and back-end systems, helping to develop and maintain <strong>5M+</strong> player games like <a href="https://www.ea.com/en-au/games/fifa/fifa-mobile">FIFA Mobile</a>, and <a href="https://play.google.com/store/apps/details?id=com.eastsidegames.trailerparkboys&hl=en_CA&gl=US">Trailer Park Boys: Greasy Money</a> alongside large teams of talented people!<br/><br/>
-			In my spare time, I love developing personal projects for fun, to learn new skills and to develop games that I enjoy! Below are open-source games that I have made over the years. Check out my <a href="https://github.com/Archiving">Github</a> for a deeper-dive, or my <a href="https://www.linkedin.com/in/solarc/">LinkedIn</a> for more info on my job experince!
+			I love developing personal projects for fun, to learn new skills and to develop games that I enjoy! I'm constantly learning in my spare time, and work on projects to reinforce my knowledge and create some cool stuff!<br /><br />
+			Below are open-source projects that I have made over the years. Check out my <a href="https://github.com/ziqianma">Github</a> for a deeper-dive, or my <a href="https://www.linkedin.com/in/solarc/">LinkedIn</a> for more info on my job experince!
+			<hr/>
+			<div style="text-align:center;">
+				<h1><a href="https://github.com/ziqianma/parallel_engine">parallel-engine</a></h1>
+				<h6><i>3D rendering/game engine made with C++ using OpenGL</i></h6>
+				<img src="demo2.png" alt="parallel-engine demo" width = "460" height = "260">
+			</div>
+			<div style="text-align:center;">
+				<h1><a href="https://github.com/perpendicular-studios/estate">Estate</a></h1>
+				<h6><i>Top-down 2D Medival RTS done in C++ with Allegro5</i></h6>
+				<video width = "460" height = "260" autoplay loop muted playsinline>	
+					<source src="estate.webm" type="video/webm">
+					<source src="estate.mp4" type="video/mp4">
+				</video>
+			</div>
 			<hr/>
 			<div style="text-align:center;">
 				<h1><a href="https://github.com/perpendicular-studios/estate">Estate</a></h1>
@@ -50,7 +66,7 @@
 			</div>
 			<hr/>
 			<div style="text-align:center;">
-				<h1><a href="https://github.com/Archiving/farm.io">farm.io</a></h1>
+				<h1><a href="https://github.com/ziqianma/farm.io">farm.io</a></h1>
 				<h6><i>Top-down 2D farming adventure done in Java with libGDX</i></h6>
 				<video width = "460" height = "260" autoplay loop muted playsinline>
 					<source src="farmio.webm" type="video/webm">
